--- a/onlineshopping/src/main/webapp/assets/css/bootstrap.css
+++ b/onlineshopping/src/main/webapp/assets/css/bootstrap.css
@@ -4701,6 +4701,7 @@ fieldset[disabled] .navbar-inverse .btn-link:focus {
   display: inline-block;
 }
 .breadcrumb > li + li:before {
+	content: "/";
   padding: 0 5px;
   color: #ccc;
   content: "/\00a0";
